--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     background: #360369;
 }
 
-.home {
+#home {
     height: 100vh;
     display: flex;
     align-items: center;
@@ -15,14 +15,14 @@
     flex-direction: column;
 }
 
-.home>h1 {
+#home>h1 {
     color: #FFF;
     text-align: center;
     font-size: 100px;
     font-weight: 700;
 }
 
-.home>button {
+#home>button {
     background: #FFF;
     color: #000;
     width: 500px;
@@ -36,10 +36,80 @@
     transition: all 1s ease;
 }
 
-
-.home>button:hover {
+#home>button:hover {
     transform: scale(1, 1.1);
     box-shadow: 2px 2px 20px white;
 }
 
+.dataPage {
+    height: 900px;
+}
 
+.col1 {
+    padding: 25px 20px;
+}
+
+.col1>h1 {
+    color: #fff;
+}
+
+.col1>p {
+    margin: 10px 0px;
+    color: #fff;
+}
+
+.ll {
+    display: flex;
+}
+
+.ll>p {
+    color: white;
+    display: flex;
+    align-items: center;
+    font-weight: 700;
+    padding: 5px 20px;
+    height: 40px;
+    margin-right: 20px;
+    width: 280px;
+    border-radius: 5px;
+    background: #270846;
+    border: none;
+}
+
+.col2 {
+    display: flex;
+    overflow: hidden;
+    background-color: #FFF;
+    border-radius: 10px !important;
+    width: 97%;
+    height: 600px;
+    margin: 20px 20px;
+}
+
+.col3 {
+    background: #FFF;
+    padding: 25px 20px;
+}
+
+.col3>h1 {
+    background: #FFF;
+    color: #360369;
+    margin-bottom: 40px;
+}
+
+.col3-data {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #FFF;
+}
+
+.col3-data > p {
+    white-space: nowrap;
+    margin: 5px 10px 5px 0px;
+    padding: 10px 40px;
+    font-weight: 600;
+    color: #FFF;
+    border-radius: 5px;
+    border: 2px solid #360369;;
+    background: #360369;
+}
